--- a/page15.html
+++ b/page15.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-27" data-rv-view="1622">
+<section id="ext_menu-27" data-rv-view="2628">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-29" data-rv-view="1620" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-29" data-rv-view="2626" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-28" data-rv-view="1624" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-28" data-rv-view="2630" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
