--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-z" data-rv-view="1501">
+<section id="ext_menu-z" data-rv-view="2507">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="1503" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="2509" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -135,7 +135,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="1506" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="2512" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
 
     
 
