--- a/werkworking.html
+++ b/werkworking.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-0" data-rv-view="1454">
+<section id="ext_menu-0" data-rv-view="2460">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website for free</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1o" data-rv-view="1445" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1o" data-rv-view="2451" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-l" data-rv-view="1447" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-l" data-rv-view="2453" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
