--- a/mail.html
+++ b/mail.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-0" data-rv-view="3410">
+<section id="ext_menu-0" data-rv-view="4043">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-e" data-rv-view="3401" style="background-color: rgb(204, 204, 204); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-footer footer4 mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts4-e" data-rv-view="4034" style="background-color: rgb(204, 204, 204); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -80,7 +80,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p><strong>Addres</strong><br>werkplaats:<br>Alexianenplein 1<br>9000 Gent<br><br><br>
-<strong>Contact</strong><strong><br></strong><br>website :&nbsp;<a href="http://www.lucaschilderkunstgent.be/" target="_blank" class="text-white"> http://www.lucaschilderkunstgent.be/</a><br>Email: saar.cools@hotmail.com</p>
+<strong>Contact</strong><strong><br></strong><br>website :&nbsp;<a href="http://www.lucaschilderkunstgent.be/" target="_blank" class="text-white"> http://www.lucaschilderkunstgent.be/</a><br>Email: saar.cools@hotmail.com<br>instagramaccount: srclsart</p>
                     </div>
                     <div class="col-sm-6"></div>
                 </div>
@@ -90,7 +90,7 @@
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="HKm3BmU2pFfJG26I5/Vy/tv3ehFc0a7a+kNnbJ7kJu+wEPkO3IXj0k8DvrqqZlBZNWXaYwKmjIap0K51TxDNv//G4cwTw+8B4nn0+lta/6GsjD0Im1vQ/i/WqvLrVCFW" data-form-email="true">
+                    <input type="hidden" value="pfOwomRKoOFZS2EegC8Hx5pbefVp89yNbu1Ot5EjPmbqcKFLSo5q0dxbNiPrZ0SAzT34KMYksZt3Dz+JWkpsPkta+OVln8C5mS1CoRIwMmKtYancwfGVg40g8KNbqzoi" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-e-email">Email<span class="form-asterisk">*</span></label>
