--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-z" data-rv-view="3431">
+<section id="ext_menu-z" data-rv-view="4064">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create a website for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="3433" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features4-1q" data-rv-view="4066" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -135,7 +135,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="3436" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-24" data-rv-view="4069" style="background-image: url(assets/images/detailwork4aca3-2000x1333.jpg);">
 
     
 
