--- a/page9.html
+++ b/page9.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-z" data-rv-view="3439">
+<section id="ext_menu-z" data-rv-view="4072">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website for free</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1n" data-rv-view="3441" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons1-1n" data-rv-view="4074" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-1k" data-rv-view="3443" style="padding-top: 6rem; padding-bottom: 6rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery2-1k" data-rv-view="4076" style="padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     
 
